--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    .modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background: white;
+  color: #000;
+  padding: 2rem;
+  border-radius: 15px;
+  max-width: 400px;
+  width: 90%;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+}
+
+.modal-content button {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background: #2a5298;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
     * {
       box-sizing: border-box;
       margin: 0;
@@ -112,6 +145,61 @@
     }
   </style>
 </head>
+
+
+
+<script>
+  const dataPopup = {
+    "jasaEditAM": {
+      judul: "Jasa Edit Alight Motion [AM]",
+      daftar: [
+        "1-5 Detik - Rp 3.000",
+        "5-10 Detik - Rp 6.000",
+        "10-15 Detik - Rp 9.000",
+        "15-20 Detik - Rp 12.000",
+        "20-25 Detik - Rp 15.000",
+        "25-30 Detik - Rp 18.000"
+      ]
+    },
+    "premiumAM": {
+      judul: "Alight Motion [AM] Premium",
+      daftar: [
+        "1 Tahun [Email Sendiri] - Rp 10.000",
+        "1 Tahun [+ Email] - Rp 15.000",
+        "1 Tahun [Android] - Rp 20.000",
+        "1 Tahun [iOS] - Rp 25.000"
+      ]
+    }
+  };
+
+  function bukaPopup(id) {
+    const data = dataPopup[id];
+    if (!data) return;
+
+    document.getElementById('popupJudul').textContent = data.judul;
+    document.getElementById('popupDaftar').innerHTML = data.daftar.map(item => `<li>${item}</li>`).join('');
+    document.getElementById('popupModal').style.display = 'flex';
+  }
+
+  function tutupPopup() {
+    document.getElementById('popupModal').style.display = 'none';
+  }
+
+function beliSekarang() {
+  const judul = document.getElementById('popupJudul').textContent;
+  const daftar = Array.from(document.querySelectorAll('#popupDaftar li'))
+                      .map(li => li.textContent)
+                      .join('\n- ');
+
+  const pesan = `Halo kak, saya tertarik membeli produk:\n${judul}\n\nBerikut pilihannya:\n- ${daftar}`;
+  const wa = "6282211205645";
+  window.open(`https://wa.me/${wa}?text=${encodeURIComponent(pesan)}`, '_blank');
+}
+
+  
+</script>
+
+
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const kirimBtn = document.querySelector('#chat button');
@@ -147,6 +235,17 @@
 </script>
 
 <body>
+  <!-- Popup Universal -->
+<div id="popupModal" style="display:none;" class="modal-overlay">
+  <div class="modal-content">
+    <h3 id="popupJudul"></h3>
+    <ul id="popupDaftar"></ul>
+    <button onclick="beliSekarang()">Beli Sekarang</button>
+    <button onclick="tutupPopup()">Tutup</button>
+  </div>
+</div>
+
+
   <header>
     <h1><i class="fas fa-store"></i> Toko Online IqbalzID | Official Horizon</h1>
     <nav>
@@ -161,18 +260,23 @@
   </header>  <section id="produk">
     <h2>Daftar Produk</h2>
     <div class="produk-grid">
-      <div class="produk-card" onclick="alert('Pulpen biru - Rp 3.000\nPulpen merah - Rp 17.500')">
-        <img src="https://via.placeholder.com/250x150?text=Pulpen" alt="Alight Motion">
-        <h3>Jasa Edit Alight Motion [AM]</h3>
-        <p>Mulai Dari Rp 3.000-17.500</p>
-        <span class="badge">Terlaris</span>
-      </div>
-      <div class="produk-card">
-        <img src="" alt="Alight Motion">
-        <h3>Alight Motion [AM] Premium</h3>
-        <p>Mulai Dari 8.000-17.000
-        <span class="badge">Terlaris</span>
-      </div>
+      <!-- Jasa Edit -->
+<div class="produk-card" onclick="bukaPopup('jasaEditAM')">
+  <img src="https://via.placeholder.com/250x150?text=Pulpen" alt="Jasa Edit">
+  <h3>Jasa Edit Alight Motion [AM]</h3>
+  <p>Mulai Dari Rp 3.000-18.000</p>
+  <span class="badge">Terlaris</span>
+</div>
+
+<!-- AM Premium -->
+<div class="produk-card" onclick="bukaPopup('premiumAM')">
+  <img src="https://via.placeholder.com/250x150?text=Alight+Motion" alt="Alight Motion Premium">
+  <h3>Alight Motion [AM] Premium</h3>
+  <p>Mulai Dari 10.000-25.000</p>
+  <span class="badge">Terlaris</span>
+</div>
+
+
       <div class="produk-card">
         <img src="https://via.placeholder.com/250x150?text=Jaket+Kulit" alt="Coding">
         <h3>Jasa Edit/Pemograman, Script [Coding]</h3>
