--- a/tentang.html
+++ b/tentang.html
@@ -52,6 +52,17 @@
     }
   </style>
 </head>
+
+<script>
+  document.addEventListener("contextmenu", e => e.preventDefault()); // blok klik kanan
+  document.onkeydown = function(e) {
+    if (e.keyCode == 123 || (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0)))) {
+      return false;
+    }
+  };
+</script>
+
+  
 <body>
   <div class="container">
     <h1>Tentang Kami</h1>
