--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       max-width: 800px;
     }
     nav a {
-      background: rgba(255,255,255,0.2);
+      background: rgba(233, 154, 6);
       padding: 0.7rem 1.5rem;
       border-radius: 8px;
       text-decoration: none;
@@ -62,7 +62,7 @@
     .hero {
       max-width: 700px;
       margin: 2rem auto;
-      background: rgba(255, 255, 255, 0.1);
+      background: rgb(233, 154, 6);
       border-radius: 20px;
       padding: 2rem;
       text-align: center;
@@ -88,6 +88,17 @@
     }
   </style>
 </head>
+
+<script>
+  document.addEventListener("contextmenu", e => e.preventDefault()); // blok klik kanan
+  document.onkeydown = function(e) {
+    if (e.keyCode == 123 || (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0)))) {
+      return false;
+    }
+  };
+</script>
+
+
 <body>
   <header>
     <img src="https://i.ibb.co/k9z1rWx/japan-logo.png" alt="Horizon Nihongo Logo" class="logo">
