--- a/produk.html
+++ b/produk.html
@@ -127,6 +127,17 @@
     }
   </style>
 </head>
+
+<script>
+  document.addEventListener("contextmenu", e => e.preventDefault()); // blok klik kanan
+  document.onkeydown = function(e) {
+    if (e.keyCode == 123 || (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0)))) {
+      return false;
+    }
+  };
+</script>
+
+
 <body>
 
   <header>
