--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
     body {
-      background: url('https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+  background: url('https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1920&q=80') no-repeat center center;
+  background-attachment: scroll;
+  background-size: cover;
+  color: white;
+  min-height: 100vh;
+}
 
-      background-size: cover;
-      color: white;
-      min-height: 100vh;
-    }
     header {
       text-align: center;
       padding: 2rem 1rem;
@@ -125,7 +126,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Horizon Nihongo. Dibuat dengan semangat oleh Iqbal Syahputra.
+    &copy; 2025 Horizon Nihongo. Dibuat dengan oleh Iqbal Syahputra.
   </footer>
 </body>
 </html>
