--- a/produk.html
+++ b/produk.html
@@ -155,7 +155,7 @@
       <div class="produk-card" onclick="bukaPopup('jasaEditAM')">
         <img src="https://via.placeholder.com/250x150?text=Pulpen" alt="Jasa Edit">
         <h3>Jasa Edit Alight Motion [AM]</h3>
-        <p>Mulai Dari Rp 3.000-18.000</p>
+        <p>Mulai Dari Rp 3.000-30.000</p>
         <span class="badge">Terlaris</span>
       </div>
 
@@ -202,12 +202,20 @@
       jasaEditAM: {
         judul: "Jasa Edit Alight Motion [AM]",
         daftar: [
+          "[PRESET]",
           "1-5 Detik - Rp 3.000",
           "5-10 Detik - Rp 6.000",
           "10-15 Detik - Rp 9.000",
           "15-20 Detik - Rp 12.000",
           "20-25 Detik - Rp 15.000",
-          "25-30 Detik - Rp 18.000"
+          "25-30 Detik - Rp 18.000",
+          "[EDIT DARI NOL]",
+          "1-5 Detik - Rp 5.000",
+          "5-10 Detik - Rp 10.000",
+          "10-15 Detik - Rp 15.000",
+          "15-20 Detik - Rp 20.000",
+          "20-25 Detik - Rp 25.000",
+          "25-30 Detik - Rp 30.000"
         ]
       },
       premiumAM: {
@@ -223,16 +231,16 @@
         judul: "Jasa Coding & Script",
         daftar: [
           "Script Bot - Rp 10.000",
-          "Pasang Bot - Rp 15.000",
-          "Fix Bug - Rp 25.000"
+          "Edit Script Bot - Rp 15.000",
+          "Fix Bug [Tergantung Kerusakan] - Rp 25.000"
         ]
       },
       bot: {
         judul: "Sewa Bot / Jadi Bot",
         daftar: [
           "1 Minggu - Rp 5.000",
-          "1 Bulan - Rp 15.000",
-          "1 Tahun - Rp 25.000"
+          "1 Bulan - Rp 20.000",
+          "1 Tahun - [COOMING SOON]"
         ]
       }
     };
